--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "node-cron": "^3.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
